[project]
name = "code-research-assistant"
version = "1.0.0"
description = "Multi-Agent LangGraph Research Assistant for Code Errors"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.34",
    "langchain>=0.3.7",
    "langchain-groq>=0.2.1",
    "langchain-community>=0.3.5",
    "duckduckgo-search>=6.3.5",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.2",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"